test/errors/E029.m3
MODULE E029;


VAR i : INTEGER;
    j := TYPECODE(i); <*ERROR 029*>

BEGIN
  
END E029.
